--- a/SpecFlowDemoQA/SpecFlowDemoQA.csproj
+++ b/SpecFlowDemoQA/SpecFlowDemoQA.csproj
@@ -11,6 +11,7 @@
     <PackageReference Include="ExtentReports" Version="4.1.0" />
     <PackageReference Include="itext7" Version="7.2.1" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.0.0" />
+    <PackageReference Include="Selenium.Support" Version="4.1.0" />
     <PackageReference Include="Selenium.WebDriver" Version="4.1.0" />
     <PackageReference Include="Selenium.WebDriver.ChromeDriver" Version="97.0.4692.7100" />
     <PackageReference Include="SpecFlow.Plus.LivingDocPlugin" Version="3.9.57" />
