--- a/SpecFlowDemoQA/SpecFlowDemoQA.csproj
+++ b/SpecFlowDemoQA/SpecFlowDemoQA.csproj
@@ -28,6 +28,7 @@
 
   <ItemGroup>
     <Folder Include="Evidences\" />
+    <Folder Include="Evidences\07-02-2022\Passed\" />
     <Folder Include="Screenshoots\" />
   </ItemGroup>
 
